# rustapi

./: LICENSE  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_client.rs  main.rs
src/components/: EnvironmentEditor.tsx  RequestPanel.tsx  ResponsePanel.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useTheme.ts
src/types/: types.ts
src/utils/: storage.ts
